# y3s2_linux_term

./: .gitmodules  CMakeLists.txt  LICENSE  cross_arm.cmake
docs/: todo.md
resource/wav/: 설명.txt
src/: entry.c  game.c  game.h  obj.h  program-fb.c  program-sound.c
src-app/: dc.c  dc.h  entry.c
src-app/arch/: program-fb.c
src-app/core/: common.h  program.c  program.h  types.h  utility.c  utility.h
src-app/core/internal/: program-types.h
src/core/: common.h  object.c  object.h  program.c  program.h  types.h  utility.h
src/core/internal/: program-types.h
third/: CMakeLists.txt
third/cairo/include/: cairo-features.h  cairo-svg.h  cairo-version.h  cairo.h
